--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,11 @@
     --mainBlack: black;
     --mainGray: #ececec;
     --mainTransition: all 0.3s ease;
+    --maxWidth: 1400px;
 }
 
 * {
     box-sizing: border-box;
-    margin: 0;
     padding: 0;
 }
 
@@ -18,6 +18,12 @@ body {
     color: var(--mainBlack);
     background-color: var(--mainWhite);
     font-family: Lato;
+    width: var(--maxWidth);
+    margin: 0 auto;
+}
+.wrapper {
+    margin: 0 auto;
+    padding: 5px 10px;
 }
 
 /* navbar */
@@ -58,4 +64,36 @@ body {
 .fa-splotch {
     font-size: 48px;
     color: yellowgreen;
+}
+/* header */
+.hero {
+    min-height: calc(100vh-60px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.banner {
+    text-align: center;
+    display: inline-block;
+    padding: 2rem;
+}
+.banner-title {
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    margin-bottom: 3rem;
+}
+.banner-btn {
+    padding: 1rem 3rem;
+    text-transform: uppercase;
+    font-size: 1rem;
+    background-color: var(--primaryColour);
+    color: var(--mainBlack);
+    border: 1px solid var(--primaryColour);
+    border-radius: 10px;
+    transition: var(--mainTransition);
+    cursor: pointer;
+}
+.banner-btn:hover {
+    background-color: transparent;
+    color: var(--primaryColour);
 }
