--- a/css/style.css
+++ b/css/style.css
@@ -170,3 +170,88 @@ body {
     color: var(--primaryColour);
     text-align: center;
 }
+/* trolley */
+.trolley-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(175, 184, 101, 0.603);
+    transition: var(--mainTransition);
+    z-index: 2;
+    /* visibility: hidden; */
+}
+.trolley {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    background-color: rgb(228, 255, 230);
+    z-index: 3;
+    padding: 1.5rem;
+    transition: var(--mainTransition);
+    /* transform: translateX(100%); */
+}
+.trolley h2 {
+    text-transform: capitalize;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+.showTrolley {
+    transform: translateX(0);
+}
+.transparentBg {
+    visibility: visible;
+}
+@media screen and (min-width: 768px) {
+    .trolley {
+        width: 30vw;
+        min-width: 450px;
+    }
+}
+.close-trolley {
+    font-size: 2rem;
+    cursor: pointer;
+}
+/* trolley-item */
+.trolley-item {
+    display: grid;
+    align-items: center;
+    grid-template-columns: auto 1fr auto;
+    grid-column-gap: 1.5rem;
+    margin: 1.5ren 0;
+}
+.trolley-item img {
+    height: 100px;
+    width: 100px;
+}
+.trolley-item h4 {
+    font-size: 0.85rem;
+    text-transform: capitalize;
+}
+.trolley-item h5 {
+    margin: 0.5rem 0;
+}
+.item-amount {
+    text-align: center;
+}
+.remove-item {
+    color: gray;
+    cursor: pointer;
+}
+.fa-chevron-up,
+.fa-chevron-down {
+    color: var(--primaryColour);
+    cursor: pointer;
+}
+.trolley-footer {
+    margin-top: 2rem;
+    text-align: center;
+}
+.trolley-footer h3 {
+    text-transform: capitalize;
+    margin-bottom: 1rem;
+}
