trolley appears when trolley button is poked

--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,7 @@ body {
 .remove-item {
     color: gray;
     cursor: pointer;
+    text-transform: capitalize;
 }
 .fa-chevron-up,
 .fa-chevron-down {
