--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 .wrapper {
     margin: 0 auto;
-    padding: 5px 10px;
+    padding: 0px 10px;
 }
 
 /* navbar */
@@ -35,6 +35,7 @@ body {
     display: flex;
     align-items: center;
     z-index: 1;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 .navbar-center {
     width: 100%;
