--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ body {
     top: 70%;
     right: 0;
     background-color: var(--primaryColour);
+    color: white;
     border: none;
     text-transform: uppercase;
     padding: 0.5rem 0.75rem;
