--- a/css/style.css
+++ b/css/style.css
@@ -126,15 +126,15 @@ body {
     border: 1px solid black;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 .img-container {
-    position: relative;
     overflow: hidden;
     flex: 1 1 auto;
 }
 .bag-btn {
     position: absolute;
-    top: 70%;
+    bottom: 10%;
     right: 0;
     background-color: var(--primaryColour);
     color: white;
@@ -143,7 +143,7 @@ body {
     padding: 0.5rem 0.75rem;
     font-weight: bold;
     transition: var(--mainTransition);
-    transform: translateX(101%);
+    transform: translateX(0%);
     cursor: pointer;
 }
 .bag-btn:hover {
