advice: tune out messages about internet explorer

--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@ body {
 
 /* navbar */
 .navbar {
-    position: -webkit-sticky;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     height: 60px;
     width: 100%;
@@ -118,8 +118,9 @@ body {
     width: 90vw;
     margin: 0 auto;
     max-width: 1400px;
-    display: -ms-grid;
     display: grid;
+    display: -ms-grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     -ms-grid-columns: repeat(auto-fit, minmax(260px, 1fr));
     grid-column-gap: 1.5rem;
     grid-row-gap: 2rem;
@@ -225,9 +226,10 @@ body {
 }
 /* trolley-item */
 .trolley-item {
-    display: -ms-grid;
     display: grid;
+    display: -ms-grid;
     align-items: center;
+    grid-template-columns: auto 1fr auto;
     -ms-grid-columns: auto 1fr auto;
     grid-column-gap: 1.5rem;
     margin: 1.5rem 0;
