--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ a {
 }
 @media (max-width: 640px) {
     .price_old {
-        font-size: 24px;
+        font-size: 14px;
     }
 }
 .price_current {
@@ -107,11 +107,6 @@ a {
     font-size: 21px;
     line-height: 130%;
     font-weight: 700;
-}
-@media (max-width: 640px) {
-    .price_current {
-        font-size: 32px;
-    }
 }
 /* header */
 .header {
@@ -228,11 +223,21 @@ a {
         margin-left: 80px;
     }
 }
-/* @media (max-width: 850px) {
-    .header__delivery_mobile img {
-        width: 50px;
+@media (max-width: 640px) {
+    .header__delivery_mobile {
+        margin-left: 40px;
     }
-} */
+}
+@media (max-width: 350px) {
+    .header__delivery_mobile {
+        display: none;
+    }
+}
+@media (max-width: 640px) {
+    .header__delivery_mobile span {
+        font-size: 14px;
+    }
+}
 .header__info {
     display: flex;
     align-items: center;
@@ -435,6 +440,11 @@ a {
     justify-content: space-between;
     padding: 0 1.2rem;
 }
+@media (max-width: 992px) {
+    .navbar-center {
+        padding: 0 10px;
+    }
+}
 @media (max-width: 850px) {
     .navbar-center {
         justify-content: flex-end;
@@ -448,7 +458,7 @@ a {
 }
 @media (max-width: 992px) {
     .nav__list {
-        width: 730px;
+        width: 650px;
     }
 }
 @media (max-width: 850px) {
@@ -458,6 +468,11 @@ a {
 }
 .nav__item {
     padding: 4px 8px;
+}
+@media (max-width: 992px) {
+    .nav__item {
+        padding: 4px;
+    }
 }
 .nav__link {
     line-height: 130%;
@@ -475,6 +490,11 @@ a {
 }
 .nav-icon {
     font-size: 21px;
+}
+@media (max-width: 992px) {
+    .nav-icon {
+        font-size: 18px;
+    }
 }
 @media (max-width: 850px) {
     .nav-icon {
@@ -897,6 +917,11 @@ button.swiper-pagination-bullet {
     background-color: transparent;
     color: var(--primaryColour);
 }
+@media (max-width: 350px) {
+    .banner-btn {
+        padding: 1rem;
+    }
+}
 /* products */
 .products {
     padding: 4rem 0;
@@ -910,9 +935,25 @@ button.swiper-pagination-bullet {
     margin-bottom: 48px;
     text-transform: capitalize;
 }
+@media (max-width: 1300px) {
+    .section-title h2 {
+        font-size: 64px;
+    }
+}
 @media (max-width: 992px) {
     .section-title h2 {
-        font-size: 54px;
+        font-size: 48px;
+    }
+}
+@media (max-width: 640px) {
+    .section-title h2 {
+        font-size: 32px;
+        margin-bottom: 32px;
+    }
+}
+@media (max-width: 400px) {
+    .products__container {
+        padding: 0 5px;
     }
 }
 .products-center {
@@ -925,27 +966,11 @@ button.swiper-pagination-bullet {
     grid-column-gap: 1.5rem;
     grid-row-gap: 2rem;
 }
-@media (max-width: 992px) {
-    .products-center {
-        grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-        -ms-grid-columns: repeat(auto-fit, minmax(270px, 1fr));
-    }
-}
-@media (max-width: 640px) {
-    .products-center {
-        grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
-    }
-}
-@media (max-width: 460px) {
-    .products-center {
-        grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
-    }
-}
-/* @media (max-width: 400px) {
+@media (max-width: 400px) {
     .products-center {
         display: block;
     }
-} */
+}
 
 .products-center__item {
     display: flex;
@@ -973,7 +998,7 @@ button.swiper-pagination-bullet {
 }
 @media (max-width: 400px) {
     .products-center__item {
-        margin: 10px 0;
+        margin: 20px 0;
     }
 }
 
@@ -997,11 +1022,6 @@ button.swiper-pagination-bullet {
 }
 .product__img img {
     max-height: 200px;
-}
-@media (max-width: 640px) {
-    .product__img img {
-        max-height: 380px;
-    }
 }
 .product__content {
     display: flex;
@@ -1039,14 +1059,14 @@ button.swiper-pagination-bullet {
     font-size: 27px;
     line-height: 130%;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
     .product__title h3 {
         font-size: 24px;
     }
 }
-@media (max-width: 640px) {
+@media (max-width: 768px) {
     .product__title h3 {
-        font-size: 36px;
+        font-size: 24px;
     }
 }
 .product__text {
@@ -1055,14 +1075,14 @@ button.swiper-pagination-bullet {
     font-size: 21px;
     line-height: 130%;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
     .product__text {
-        font-size: 21px;
+        font-size: 18px;
     }
 }
-@media (max-width: 640px) {
+@media (max-width: 350px) {
     .product__text {
-        font-size: 32px;
+        font-size: 15px;
     }
 }
 .product__price {
@@ -1075,7 +1095,7 @@ button.swiper-pagination-bullet {
 }
 .btn_buy {
     position: absolute;
-    bottom: 8%;
+    bottom: 12%;
     right: 10%;
     border: none;
     border-radius: 7px;
@@ -1086,9 +1106,22 @@ button.swiper-pagination-bullet {
     transform: translateX(0%);
     cursor: pointer;
 }
+@media (max-width: 992px) {
+    .btn_buy {
+        bottom: 8%;
+        font-size: 18px;
+    }
+}
 @media (max-width: 640px) {
     .btn_buy {
-        font-size: 32px;
+        bottom: 12%;
+    }
+}
+@media (max-width: 350px) {
+    .btn_buy {
+        right: 0;
+        bottom: 6%;
+        padding: 5px;
     }
 }
 .bag-btn:hover {
@@ -1138,6 +1171,11 @@ button.swiper-pagination-bullet {
     text-align: center;
     margin-bottom: 2rem;
 }
+@media (max-width: 350px) {
+    .trolley-item h4 {
+        font-size: 16px;
+    }
+}
 .showTrolley {
     transform: translateX(0);
 }
@@ -1164,16 +1202,36 @@ button.swiper-pagination-bullet {
     grid-column-gap: 1.5rem;
     margin: 1.5rem 0;
 }
+@media (max-width: 530px) {
+    .trolley-item {
+        grid-column-gap: 1rem;
+    }
+}
 .trolley-item img {
     height: 100px;
-    width: 100px;
+    min-width: 100px;
 }
 .trolley-item h4 {
     font-size: 0.85rem;
     text-transform: capitalize;
 }
+@media (max-width: 640px) {
+    .trolley-item h4 {
+        font-size: 21px;
+    }
+}
+@media (max-width: 350px) {
+    .trolley-item h4 {
+        font-size: 16px;
+    }
+}
 .trolley-item h5 {
     margin: 0.5rem 0;
+}
+@media (max-width: 640px) {
+    .trolley-item h5 {
+        font-size: 16px;
+    }
 }
 .item-amount {
     text-align: center;
